# mandelbrot-performance

./: CMakeLists.txt  common.cpp  common.hpp  mandelbrot-cpp.cpp  mandelbrot-numpy.py  mandelbrot-python.py  mandelbrot-soa.cpp  mandelbrot-vis.py  param.hpp
